# Omegacam-Desktop

./: .gitignore  README.md
Omegacam/: .gitignore  CMakeLists.txt  cameralistwidget.cpp  cameralistwidget.h  common_includes.h  communication.cpp  communication.h  home.cpp  home.h  home.ui  main.cpp  options.h
Omegacam-Windows/: Omegacam-Windows.cpp  Omegacam-Windows.rc  Omegacam-Windows.sln  Omegacam-Windows.vcxproj  Omegacam-Windows.vcxproj.filters  Resource.h
Omegacam/src/: common_includes.h  main.cpp
Omegacam/src/Backend/: backendDelegate.cpp  backendDelegate.h  backendStructs.h  communication.cpp  communication.h  logs.cpp  logs.h
Omegacam/src/Backend/Data/: dataManager.cpp  dataManager.h  dataParser.cpp  multipartPacketParser.cpp  multipartPacketParser.h
Omegacam/src/Backend/Network/: communication.cpp  communication.h  communicationThread.cpp  communicationThread.h  discoveryCommunicationThread.cpp  discoveryCommunicationThread.h  udp_socket.cpp  udp_socket.h
Omegacam/src/Backend/Network/Communication/: communication.cpp  communication.h  communicationThread.cpp  communicationThread.h
Omegacam/src/Backend/Network/DiscoveryCommunication/: discoveryCommunication.cpp  discoveryCommunication.h  discoveryCommunicationThread.cpp  discoveryCommunicationThread.h
Omegacam/src/Backend/Network/Sockets/: subSocket.cpp  subSocket.h  udp_socket.cpp  udp_socket.h
Omegacam/src/UI/: cameralistwidget.cpp  cameralistwidget.h  home.cpp  home.h  miscellaneous.h
Omegacam/src/UI/Custom/: CameraPushButton.h
build-Omegacam-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Omegacam.ilk  build.ninja  cmake_install.cmake
build-Omegacam-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Omegacam_autogen/: deps  mocs_compilation.cpp
build-Omegacam-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Omegacam_autogen/EWIEGA46WW/: moc_cameralistwidget.cpp  moc_cameralistwidget.cpp.d  moc_home.cpp  moc_home.cpp.d
build-Omegacam-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Omegacam-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/Omegacam_autogen/: deps  mocs_compilation.cpp
(+46 files in other folders)
